
** Fix build errors related to doc/idn2--help.texi.
With older makeinfo, this would manifest itself by looking for
idn2-help.texi instead.  Further, some BSD grep implementations did
not like the \+ regexp command, so we now rely on the (apparently)
more portable * regexp command.  Reported-By: David Gessel.  See
<https://gitlab.com/libidn/libidn2/-/issues/93>.

** doc: Improve GTK-DOC manual.

* Noteworthy changes in release 2.3.1 (2021-05-12) [stable]

** Implement full roundtrip for lookup functionality
With TR64 enabled (default), 'â˜ºi' was converted to 'xn-- o-oia59s'.
The output contains an illegal space and thus could not be decoded any
more.  Reported-by: Chris Malton.  See
<https://gitlab.com/libidn/libidn2/issues/78> and
<https://gitlab.isc.org/isc-projects/bind9/issues/1610>.

** Fix domain too long error

** doc: idn2.1 and libidn2.texi automatically get idn2 --help output.

** Updated gnulib files and various build fixes.
In particular, it no longer attempts to detect a host CC compiler.
See <https://gitlab.com/libidn/libidn2/-/issues/83>.

* Noteworthy changes in release 2.3.0 (2019-11-14) [stable]

** Mitre has assigned CVE-2019-12290 which was fixed by
   the roundtrip feature introduced in 2.2.0 (commit 241e8f48)

** Update the data tables from Unicode 6.3.0 to Unicode 11.0

** Turn _idn2_punycode_encode, _idn2_punycode_decode
   into compat symbols (Fixes #74)


* Noteworthy changes in release 2.2.0 (2019-05-23) [stable]

** Perform A-Label roundtrip for lookup functions by default

** Stricter check of input to punycode decoder

** Fix punycode decoding with no ASCII chars but given delimiter

** Fix 'idn2 --no-tr64' (was a no-op)

** Allow _ as a basic code point in domain labels

** Fail building documentatino if 'ronn' isn't installed

** git tag changed to reflect https://semver.org/


* Noteworthy changes in release 2.1.1 (2019-02-08) [beta]

** Revert SONAME bump from release 2.1.0
