@@ -15,6 +15,8 @@ more portable * regexp command.  Reported-By: David Gessel.  See
 
 ** doc: Improve GTK-DOC manual.
 
+** doc: Don't ship HTML/PDF manual.  Drop custom CSS stylesheet.
+
 * Noteworthy changes in release 2.3.1 (2021-05-12) [stable]
 
 ** Implement full roundtrip for lookup functionality
